# databricks-mcp

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  core.py  pyproject.toml  server.py
docs/: README-zh-tw.md
tools/: __init__.py  compute.py  delta.py  jobs.py  metrics.py  pipelines.py  query.py
